Update VJ test case version 02